Aplique cambios sugeridos

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                                     <textarea class="form-control" id="exampleFormControlTextarea1" rows="2"></textarea>
                                 </div>
                                 <div class="modal-body">
-                                    <i class="fa-solid fa-camera"></i>
-                                    <i class="fa-solid fa-location-dot"></i>
+                                    <button type="button" class="btn btn-light"><i class="fa-solid fa-camera"></i></button>
+                                    <button type="button" class="btn btn-light"><i class="fa-solid fa-location-dot"></i></button>
                                 </div>
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-secondary"
@@ -50,7 +50,7 @@
                             <a class="nav-link dropdown-toggle mt-1" href="#" id="navbarDropdownMenuLink" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false"><i class="fa-solid fa-gear fs-5"></i>
                             </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <ul class="dropdown-menu dropdown-menu-end dropdown-menu-start" aria-labelledby="navbarDropdownMenuLink">
                                 <li><a class="dropdown-item" href="#">Action</a></li>
                                 <li><a class="dropdown-item" href="#">Another action</a></li>
                                 <li><a class="dropdown-item" href="#">Something else here</a></li>
